<resources>
    <string name="app_name">饭点</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_filter">查询条件</string>
    <string name="action_edit">编辑</string>
    <string name="action_change">改变食堂</string>
    <string name="register">新用户</string>
    <string name="no_net_work">咦,没有网络哦</string>
    <string name="username_empty">账号不能为空哦</string>
    <string name="user_password_empty">密码不能为空哦</string>
    <string name="login_now">正在登陆</string>
    <string name="login_init">登陆成功，正在加载</string>
    <string name="register_now">正在注册</string>
    <string name="password_not_equal">两次密码不同哦</string>
    <string name="prompt_userName">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_again">再次输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register_in">注册</string>
    <string name="student_tab1">所有</string>
    <string name="student_tab2">食材</string>
    <string name="student_tab3">动态</string>
    <string name="student_tab4">健康</string>
    <string name="canteen_bab1">我的</string>
    <string name="canteen_bab2">数据</string>
    <string name="canteen_bab3">食材</string>
    <string name="canteen_bab4">动态</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登陆成功</string>
    <string name="type_student">Student</string>
    <string name="type_canteen">Canteen</string>
    <string name="type_empty">请选择类型</string>
    <string name="food_name">菜名</string>
    <string name="food_price">价格</string>
    <string name="foodname_empty">菜名没填啊</string>
    <string name="foodprice_empty">价格没填啊</string>
    <string name="foodimage_empty">照片没选择啊</string>
    <string name="image_error">大哥。发送图片错了</string>
    <string name="post_success">成功了</string>
    <string name="food_time">您推出的所有菜品都是明天的</string>
    <string name="cancel">取消</string>
    <string name="action_post">推出</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="save_success">嗯，食堂知道了</string>
    <string name="food_schedule">喜欢</string>
    <string name="food_scheduled">已喜欢</string>
    <string name="loading">只要一会儿哦</string>
    <string name="comment_hear">我也来说一句..</string>
    <string name="select_canteen">选择餐厅</string>
    <string name="drop_success">下架成功</string>
    <string name="delete_success">删除成功</string>
    <string name="action_output">导出为表格</string>
    <string name="update_success">更新成功</string>
    <string name="post">写动态</string>
    <string name="successPost"><u>发送</u></string>
    <string name="action_add_moments">添加</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="TargetAPI">14</string>
    <string name="search">搜索</string>
    <string name="footer_load_finish">没有数据了</string>
    <string name="footer_load_more">正在加载</string>
    <string name="footer_behavior">dawizards.eatting.ui.customview.behavior.FooterBehavior</string>
    <string name="scale_behavior">dawizards.eatting.ui.customview.behavior.ScaleBehavior</string>
    <string name="update_now">正在上传</string>

    <string name="title_activity_navagation">NavagationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register_fail">注册失败</string>
</resources>
